kubernetes/yolov8.service.yml
apiVersion: v1
kind: Service
metadata:
  name: yolov8-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9696
      targetPort: 80
      protocol: TCP
  selector:
    app: yolov8
